--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
       run: docker exec solr_container solr create_core -c hydra-test -d /var/solr/configsets/hy-c
 
     - name: Run rspec tests
-      run: bundle exec rspec
+      run: bundle exec rspec ./spec/services/tasks/pubmed_ingest_service_spec.rb ./spec/helpers/hyrax/work_utils_helper_spec.rb
       env:
         REDIS_URL: redis://redis
         POSTGRES_USER: hyrax
