--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,7 +139,7 @@ jobs:
       run: docker exec solr_container solr create_core -c hydra-test -d /var/solr/configsets/hy-c
 
     - name: Run rspec tests
-      run: bundle exec rspec spec/services/tasks/pubmed_ingest spec/helpers/hyrax/work_utils_helper_spec.rb
+      run: bundle exec rspec
       env:
         REDIS_URL: redis://redis
         POSTGRES_USER: hyrax
