--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,10 +108,11 @@ jobs:
     - name: Run RuboCop
       run: bundle exec rubocop --parallel --config .rubocop.yml
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v4
       with:
-        java-version: 1.8
+        java-version: 11
+        distribution: 'temurin'
 
     - name: Install OS packages
       run: |
